etapa2 ddd/y.output
Terminals unused in grammar

    TOKEN_ERROR
    '^'


State 113 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: KW_DATA '{' declist '}' functionlist

    2 cmd_list: cmd ';' cmd_list
    3         | cmd ';'

    4 cmd: identifier '=' expression
    5    | identifier '[' literal ']' '=' expression
    6    | identifier '[' expression ']' '=' expression
    7    | KW_PRINT expression_list
    8    | KW_RETURN expression
    9    | KW_COMEFROM ':' expression
   10    | flow_control
   11    | block
   12    | identifier
   13    | %empty

   14 flow_control: KW_IF '(' expression ')' cmd
   15             | KW_IF '(' expression ')' cmd KW_ELSE cmd
   16             | KW_UNTIL '(' expression ')' cmd

   17 block: '{' cmd_list '}'
   18      | '{' '}'

   19 expression: identifier
   20           | identifier '[' expression ']'
   21           | literal_withstring
   22           | expression '+' expression
   23           | expression '-' expression
   24           | expression '*' expression
   25           | expression '/' expression
   26           | expression '<' expression
   27           | expression '>' expression
   28           | expression '|' expression
   29           | expression '&' expression
   30           | expression '~' expression
   31           | '~' expression
   32           | '(' expression ')'
   33           | expression OPERATOR_LE expression
   34           | expression OPERATOR_GE expression
   35           | expression OPERATOR_EQ expression
   36           | expression OPERATOR_DIF expression
   37           | identifier literal
   38           | functioncall
   39           | KW_READ
   40           | function
   41           | identifier '(' expression_list ')'

   42 expression_list: expression
   43                | expression ',' expression_list

   44 functioncall: identifier '(' parameter parameterslist ')'
   45             | identifier '(' ')'

   46 functionlist: function functionlist
   47             | %empty

   48 function: type ':' identifier '(' parameter parameterslist ')' block
   49         | type ':' identifier '(' ')' block

   50 parameterslist: %empty
   51               | ',' parameter parameterslist

   52 parameter: type ':' identifier

   53 declist: dec ';' declist
   54        | %empty

   55 dec: type ':' identifier '=' literal
   56    | type '[' literal ']' ':' identifier '=' litlist
   57    | type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier '=' litlist
   58    | type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier
   59    | type '[' literal ']' ':' identifier

   60 litlist: literal litlist
   61        | %empty

   62 literal_withstring: literal
   63                   | LIT_STRING

   64 literal: LIT_CHAR
   65        | LIT_INTEGER

   66 identifier: TK_IDENTIFIER

   67 type: KW_INT
   68     | KW_FLOAT
   69     | KW_CHAR


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 29
    '(' (40) 14 15 16 32 41 44 45 48 49
    ')' (41) 14 15 16 32 41 44 45 48 49
    '*' (42) 24
    '+' (43) 22
    ',' (44) 43 51
    '-' (45) 23
    '/' (47) 25
    ':' (58) 9 48 49 52 55 56 57 58 59
    ';' (59) 2 3 53
    '<' (60) 26
    '=' (61) 4 5 6 55 56 57
    '>' (62) 27
    '[' (91) 5 6 20 56 57 58 59
    ']' (93) 5 6 20 56 57 58 59
    '^' (94)
    '{' (123) 1 17 18
    '|' (124) 28
    '}' (125) 1 17 18
    '~' (126) 30 31
    error (256)
    KW_CHAR (258) 69
    KW_INT (259) 67
    KW_FLOAT (260) 68
    KW_DATA (261) 1
    KW_IF (262) 14 15
    KW_ELSE (263) 15
    KW_UNTIL (264) 16
    KW_COMEFROM (265) 9
    KW_READ (266) 39
    KW_PRINT (267) 7
    KW_RETURN (268) 8
    OPERATOR_LE (269) 33
    OPERATOR_GE (270) 34
    OPERATOR_EQ (271) 35
    OPERATOR_DIF (272) 36
    OPERATOR_RANGE (273) 57 58
    TK_IDENTIFIER (274) 66
    LIT_INTEGER (275) 57 58 65
    LIT_CHAR (276) 64
    LIT_STRING (277) 63
    TOKEN_ERROR (278)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program (45)
        on left: 1
        on right: 0
    cmd_list (46)
        on left: 2 3
        on right: 2 17
    cmd (47)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3 14 15 16
    flow_control (48)
        on left: 14 15 16
        on right: 10
    block (49)
        on left: 17 18
        on right: 11 48 49
    expression (50)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 4 5 6 8 9 14 15 16 20 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 42 43
    expression_list (51)
        on left: 42 43
        on right: 7 41 43
    functioncall (52)
        on left: 44 45
        on right: 38
    functionlist (53)
        on left: 46 47
        on right: 1 46
    function (54)
        on left: 48 49
        on right: 40 46
    parameterslist (55)
        on left: 50 51
        on right: 44 48 51
    parameter (56)
        on left: 52
        on right: 44 48 51
    declist (57)
        on left: 53 54
        on right: 1 53
    dec (58)
        on left: 55 56 57 58 59
        on right: 53
    litlist (59)
        on left: 60 61
        on right: 56 57 60
    literal_withstring (60)
        on left: 62 63
        on right: 21
    literal (61)
        on left: 64 65
        on right: 5 37 55 56 59 60 62
    identifier (62)
        on left: 66
        on right: 4 5 6 12 19 20 37 41 44 45 48 49 52 55 56 57 58 59
    type (63)
        on left: 67 68 69
        on right: 48 49 52 55 56 57 58 59


State 0

    0 $accept: . program $end

    KW_DATA  shift, and go to state 1

    program  go to state 2


State 1

    1 program: KW_DATA . '{' declist '}' functionlist

    '{'  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: KW_DATA '{' . declist '}' functionlist

    KW_CHAR   shift, and go to state 5
    KW_INT    shift, and go to state 6
    KW_FLOAT  shift, and go to state 7

    $default  reduce using rule 54 (declist)

    declist  go to state 8
    dec      go to state 9
    type     go to state 10


State 4

    0 $accept: program $end .

    $default  accept


State 5

   69 type: KW_CHAR .

    $default  reduce using rule 69 (type)


State 6

   67 type: KW_INT .

    $default  reduce using rule 67 (type)


State 7

   68 type: KW_FLOAT .

    $default  reduce using rule 68 (type)


State 8

    1 program: KW_DATA '{' declist . '}' functionlist

    '}'  shift, and go to state 11


State 9

   53 declist: dec . ';' declist

    ';'  shift, and go to state 12


State 10

   55 dec: type . ':' identifier '=' literal
   56    | type . '[' literal ']' ':' identifier '=' litlist
   57    | type . '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier '=' litlist
   58    | type . '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier
   59    | type . '[' literal ']' ':' identifier

    '['  shift, and go to state 13
    ':'  shift, and go to state 14


State 11

    1 program: KW_DATA '{' declist '}' . functionlist

    KW_CHAR   shift, and go to state 5
    KW_INT    shift, and go to state 6
    KW_FLOAT  shift, and go to state 7

    $default  reduce using rule 47 (functionlist)

    functionlist  go to state 15
    function      go to state 16
    type          go to state 17


State 12

   53 declist: dec ';' . declist

    KW_CHAR   shift, and go to state 5
    KW_INT    shift, and go to state 6
    KW_FLOAT  shift, and go to state 7

    $default  reduce using rule 54 (declist)

    declist  go to state 18
    dec      go to state 9
    type     go to state 10


State 13

   56 dec: type '[' . literal ']' ':' identifier '=' litlist
   57    | type '[' . LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier '=' litlist
   58    | type '[' . LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier
   59    | type '[' . literal ']' ':' identifier

    LIT_INTEGER  shift, and go to state 19
    LIT_CHAR     shift, and go to state 20

    literal  go to state 21


State 14

   55 dec: type ':' . identifier '=' literal

    TK_IDENTIFIER  shift, and go to state 22

    identifier  go to state 23


State 15

    1 program: KW_DATA '{' declist '}' functionlist .

    $default  reduce using rule 1 (program)


State 16

   46 functionlist: function . functionlist

    KW_CHAR   shift, and go to state 5
    KW_INT    shift, and go to state 6
    KW_FLOAT  shift, and go to state 7

    $default  reduce using rule 47 (functionlist)

    functionlist  go to state 24
    function      go to state 16
    type          go to state 17


State 17

   48 function: type . ':' identifier '(' parameter parameterslist ')' block
   49         | type . ':' identifier '(' ')' block

    ':'  shift, and go to state 25


State 18

   53 declist: dec ';' declist .

    $default  reduce using rule 53 (declist)


State 19

   57 dec: type '[' LIT_INTEGER . OPERATOR_RANGE LIT_INTEGER ']' ':' identifier '=' litlist
   58    | type '[' LIT_INTEGER . OPERATOR_RANGE LIT_INTEGER ']' ':' identifier
   65 literal: LIT_INTEGER .

    OPERATOR_RANGE  shift, and go to state 26

    $default  reduce using rule 65 (literal)


State 20

   64 literal: LIT_CHAR .

    $default  reduce using rule 64 (literal)


State 21

   56 dec: type '[' literal . ']' ':' identifier '=' litlist
   59    | type '[' literal . ']' ':' identifier

    ']'  shift, and go to state 27


State 22

   66 identifier: TK_IDENTIFIER .

    $default  reduce using rule 66 (identifier)


State 23

   55 dec: type ':' identifier . '=' literal

    '='  shift, and go to state 28


State 24

   46 functionlist: function functionlist .

    $default  reduce using rule 46 (functionlist)


State 25

   48 function: type ':' . identifier '(' parameter parameterslist ')' block
   49         | type ':' . identifier '(' ')' block

    TK_IDENTIFIER  shift, and go to state 22

    identifier  go to state 29


State 26

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE . LIT_INTEGER ']' ':' identifier '=' litlist
   58    | type '[' LIT_INTEGER OPERATOR_RANGE . LIT_INTEGER ']' ':' identifier

    LIT_INTEGER  shift, and go to state 30


State 27

   56 dec: type '[' literal ']' . ':' identifier '=' litlist
   59    | type '[' literal ']' . ':' identifier

    ':'  shift, and go to state 31


State 28

   55 dec: type ':' identifier '=' . literal

    LIT_INTEGER  shift, and go to state 32
    LIT_CHAR     shift, and go to state 20

    literal  go to state 33


State 29

   48 function: type ':' identifier . '(' parameter parameterslist ')' block
   49         | type ':' identifier . '(' ')' block

    '('  shift, and go to state 34


State 30

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER . ']' ':' identifier '=' litlist
   58    | type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER . ']' ':' identifier

    ']'  shift, and go to state 35


State 31

   56 dec: type '[' literal ']' ':' . identifier '=' litlist
   59    | type '[' literal ']' ':' . identifier

    TK_IDENTIFIER  shift, and go to state 22

    identifier  go to state 36


State 32

   65 literal: LIT_INTEGER .

    $default  reduce using rule 65 (literal)


State 33

   55 dec: type ':' identifier '=' literal .

    $default  reduce using rule 55 (dec)


State 34

   48 function: type ':' identifier '(' . parameter parameterslist ')' block
   49         | type ':' identifier '(' . ')' block

    KW_CHAR   shift, and go to state 5
    KW_INT    shift, and go to state 6
    KW_FLOAT  shift, and go to state 7
    ')'       shift, and go to state 37

    parameter  go to state 38
    type       go to state 39


State 35

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' . ':' identifier '=' litlist
   58    | type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' . ':' identifier

    ':'  shift, and go to state 40


State 36

   56 dec: type '[' literal ']' ':' identifier . '=' litlist
   59    | type '[' literal ']' ':' identifier .

    '='  shift, and go to state 41

    $default  reduce using rule 59 (dec)


State 37

   49 function: type ':' identifier '(' ')' . block

    '{'  shift, and go to state 42

    block  go to state 43


State 38

   48 function: type ':' identifier '(' parameter . parameterslist ')' block

    ','  shift, and go to state 44

    $default  reduce using rule 50 (parameterslist)

    parameterslist  go to state 45


State 39

   52 parameter: type . ':' identifier

    ':'  shift, and go to state 46


State 40

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' . identifier '=' litlist
   58    | type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' . identifier

    TK_IDENTIFIER  shift, and go to state 22

    identifier  go to state 47


State 41

   56 dec: type '[' literal ']' ':' identifier '=' . litlist

    LIT_INTEGER  shift, and go to state 32
    LIT_CHAR     shift, and go to state 20

    $default  reduce using rule 61 (litlist)

    litlist  go to state 48
    literal  go to state 49


State 42

   17 block: '{' . cmd_list '}'
   18      | '{' . '}'

    KW_IF          shift, and go to state 50
    KW_UNTIL       shift, and go to state 51
    KW_COMEFROM    shift, and go to state 52
    KW_PRINT       shift, and go to state 53
    KW_RETURN      shift, and go to state 54
    TK_IDENTIFIER  shift, and go to state 22
    '{'            shift, and go to state 42
    '}'            shift, and go to state 55

    $default  reduce using rule 13 (cmd)

    cmd_list      go to state 56
    cmd           go to state 57
    flow_control  go to state 58
    block         go to state 59
    identifier    go to state 60


State 43

   49 function: type ':' identifier '(' ')' block .

    $default  reduce using rule 49 (function)


State 44

   51 parameterslist: ',' . parameter parameterslist

    KW_CHAR   shift, and go to state 5
    KW_INT    shift, and go to state 6
    KW_FLOAT  shift, and go to state 7

    parameter  go to state 61
    type       go to state 39


State 45

   48 function: type ':' identifier '(' parameter parameterslist . ')' block

    ')'  shift, and go to state 62


State 46

   52 parameter: type ':' . identifier

    TK_IDENTIFIER  shift, and go to state 22

    identifier  go to state 63


State 47

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier . '=' litlist
   58    | type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier .

    '='  shift, and go to state 64

    $default  reduce using rule 58 (dec)


State 48

   56 dec: type '[' literal ']' ':' identifier '=' litlist .

    $default  reduce using rule 56 (dec)


State 49

   60 litlist: literal . litlist

    LIT_INTEGER  shift, and go to state 32
    LIT_CHAR     shift, and go to state 20

    $default  reduce using rule 61 (litlist)

    litlist  go to state 65
    literal  go to state 49


State 50

   14 flow_control: KW_IF . '(' expression ')' cmd
   15             | KW_IF . '(' expression ')' cmd KW_ELSE cmd

    '('  shift, and go to state 66


State 51

   16 flow_control: KW_UNTIL . '(' expression ')' cmd

    '('  shift, and go to state 67


State 52

    9 cmd: KW_COMEFROM . ':' expression

    ':'  shift, and go to state 68


State 53

    7 cmd: KW_PRINT . expression_list

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 73
    expression_list     go to state 74
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 54

    8 cmd: KW_RETURN . expression

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 80
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 55

   18 block: '{' '}' .

    $default  reduce using rule 18 (block)


State 56

   17 block: '{' cmd_list . '}'

    '}'  shift, and go to state 81


State 57

    2 cmd_list: cmd . ';' cmd_list
    3         | cmd . ';'

    ';'  shift, and go to state 82


State 58

   10 cmd: flow_control .

    $default  reduce using rule 10 (cmd)


State 59

   11 cmd: block .

    $default  reduce using rule 11 (cmd)


State 60

    4 cmd: identifier . '=' expression
    5    | identifier . '[' literal ']' '=' expression
    6    | identifier . '[' expression ']' '=' expression
   12    | identifier .

    '='  shift, and go to state 83
    '['  shift, and go to state 84

    $default  reduce using rule 12 (cmd)


State 61

   51 parameterslist: ',' parameter . parameterslist

    ','  shift, and go to state 44

    $default  reduce using rule 50 (parameterslist)

    parameterslist  go to state 85


State 62

   48 function: type ':' identifier '(' parameter parameterslist ')' . block

    '{'  shift, and go to state 42

    block  go to state 86


State 63

   52 parameter: type ':' identifier .

    $default  reduce using rule 52 (parameter)


State 64

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier '=' . litlist

    LIT_INTEGER  shift, and go to state 32
    LIT_CHAR     shift, and go to state 20

    $default  reduce using rule 61 (litlist)

    litlist  go to state 87
    literal  go to state 49


State 65

   60 litlist: literal litlist .

    $default  reduce using rule 60 (litlist)


State 66

   14 flow_control: KW_IF '(' . expression ')' cmd
   15             | KW_IF '(' . expression ')' cmd KW_ELSE cmd

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 88
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 67

   16 flow_control: KW_UNTIL '(' . expression ')' cmd

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 89
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 68

    9 cmd: KW_COMEFROM ':' . expression

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 90
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 69

   39 expression: KW_READ .

    $default  reduce using rule 39 (expression)


State 70

   63 literal_withstring: LIT_STRING .

    $default  reduce using rule 63 (literal_withstring)


State 71

   31 expression: '~' . expression

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 91
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 72

   32 expression: '(' . expression ')'

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 92
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 73

   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | expression . '*' expression
   25           | expression . '/' expression
   26           | expression . '<' expression
   27           | expression . '>' expression
   28           | expression . '|' expression
   29           | expression . '&' expression
   30           | expression . '~' expression
   33           | expression . OPERATOR_LE expression
   34           | expression . OPERATOR_GE expression
   35           | expression . OPERATOR_EQ expression
   36           | expression . OPERATOR_DIF expression
   42 expression_list: expression .
   43                | expression . ',' expression_list

    OPERATOR_LE   shift, and go to state 93
    OPERATOR_GE   shift, and go to state 94
    OPERATOR_EQ   shift, and go to state 95
    OPERATOR_DIF  shift, and go to state 96
    '<'           shift, and go to state 97
    '>'           shift, and go to state 98
    '&'           shift, and go to state 99
    '|'           shift, and go to state 100
    '~'           shift, and go to state 101
    '+'           shift, and go to state 102
    '-'           shift, and go to state 103
    '*'           shift, and go to state 104
    '/'           shift, and go to state 105
    ','           shift, and go to state 106

    $default  reduce using rule 42 (expression_list)


State 74

    7 cmd: KW_PRINT expression_list .

    $default  reduce using rule 7 (cmd)


State 75

   38 expression: functioncall .

    $default  reduce using rule 38 (expression)


State 76

   40 expression: function .

    $default  reduce using rule 40 (expression)


State 77

   21 expression: literal_withstring .

    $default  reduce using rule 21 (expression)


State 78

   62 literal_withstring: literal .

    $default  reduce using rule 62 (literal_withstring)


State 79

   19 expression: identifier .
   20           | identifier . '[' expression ']'
   37           | identifier . literal
   41           | identifier . '(' expression_list ')'
   44 functioncall: identifier . '(' parameter parameterslist ')'
   45             | identifier . '(' ')'

    LIT_INTEGER  shift, and go to state 32
    LIT_CHAR     shift, and go to state 20
    '['          shift, and go to state 107
    '('          shift, and go to state 108

    $default  reduce using rule 19 (expression)

    literal  go to state 109


State 80

    8 cmd: KW_RETURN expression .
   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | expression . '*' expression
   25           | expression . '/' expression
   26           | expression . '<' expression
   27           | expression . '>' expression
   28           | expression . '|' expression
   29           | expression . '&' expression
   30           | expression . '~' expression
   33           | expression . OPERATOR_LE expression
   34           | expression . OPERATOR_GE expression
   35           | expression . OPERATOR_EQ expression
   36           | expression . OPERATOR_DIF expression

    OPERATOR_LE   shift, and go to state 93
    OPERATOR_GE   shift, and go to state 94
    OPERATOR_EQ   shift, and go to state 95
    OPERATOR_DIF  shift, and go to state 96
    '<'           shift, and go to state 97
    '>'           shift, and go to state 98
    '&'           shift, and go to state 99
    '|'           shift, and go to state 100
    '~'           shift, and go to state 101
    '+'           shift, and go to state 102
    '-'           shift, and go to state 103
    '*'           shift, and go to state 104
    '/'           shift, and go to state 105

    $default  reduce using rule 8 (cmd)


State 81

   17 block: '{' cmd_list '}' .

    $default  reduce using rule 17 (block)


State 82

    2 cmd_list: cmd ';' . cmd_list
    3         | cmd ';' .

    KW_IF          shift, and go to state 50
    KW_UNTIL       shift, and go to state 51
    KW_COMEFROM    shift, and go to state 52
    KW_PRINT       shift, and go to state 53
    KW_RETURN      shift, and go to state 54
    TK_IDENTIFIER  shift, and go to state 22
    '{'            shift, and go to state 42

    ';'       reduce using rule 13 (cmd)
    $default  reduce using rule 3 (cmd_list)

    cmd_list      go to state 110
    cmd           go to state 57
    flow_control  go to state 58
    block         go to state 59
    identifier    go to state 60


State 83

    4 cmd: identifier '=' . expression

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 111
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 78
    identifier          go to state 79
    type                go to state 17


State 84

    5 cmd: identifier '[' . literal ']' '=' expression
    6    | identifier '[' . expression ']' '=' expression

    KW_CHAR        shift, and go to state 5
    KW_INT         shift, and go to state 6
    KW_FLOAT       shift, and go to state 7
    KW_READ        shift, and go to state 69
    TK_IDENTIFIER  shift, and go to state 22
    LIT_INTEGER    shift, and go to state 32
    LIT_CHAR       shift, and go to state 20
    LIT_STRING     shift, and go to state 70
    '~'            shift, and go to state 71
    '('            shift, and go to state 72

    expression          go to state 112
    functioncall        go to state 75
    function            go to state 76
    literal_withstring  go to state 77
    literal             go to state 113
    identifier          go to state 79
    type                go to state 17


State 85

   51 parameterslist: ',' parameter parameterslist .

    $default  reduce using rule 51 (parameterslist)


State 86

   48 function: type ':' identifier '(' parameter parameterslist ')' block .

    $default  reduce using rule 48 (function)


State 87

   57 dec: type '[' LIT_INTEGER OPERATOR_RANGE LIT_INTEGER ']' ':' identifier '=' litlist .

    $default  reduce using rule 57 (dec)


State 88

   14 flow_control: KW_IF '(' expression . ')' cmd
   15             | KW_IF '(' expression . ')' cmd KW_ELSE cmd
   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | expression . '*' expression
   25           | expression . '/' expression
   26           | expression . '<' expression
   27           | expression . '>' expression
   28           | expression . '|' expression
   29           | expression . '&' expression
   30           | expression . '~' expression
   33           | expression . OPERATOR_LE expression
   34           | expression . OPERATOR_GE expression
   35           | expression . OPERATOR_EQ expression
   36           | expression . OPERATOR_DIF expression

    OPERATOR_LE   shift, and go to state 93
    OPERATOR_GE   shift, and go to state 94
    OPERATOR_EQ   shift, and go to state 95
    OPERATOR_DIF  shift, and go to state 96
    '<'           shift, and go to state 97
    '>'           shift, and go to state 98
    '&'           shift, and go to state 99
    '|'           shift, and go to state 100
    '~'           shift, and go to state 101
    '+'           shift, and go to state 102
    '-'           shift, and go to state 103
    '*'           shift, and go to state 104
    '/'           shift, and go to state 105
    ')'           shift, and go to state 114


State 89

   16 flow_control: KW_UNTIL '(' expression . ')' cmd
   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | expression . '*' expression
   25           | expression . '/' expression
   26           | expression . '<' expression
   27           | expression . '>' expression
   28           | expression . '|' expression
   29           | expression . '&' expression
   30           | expression . '~' expression
   33           | expression . OPERATOR_LE expression
   34           | expression . OPERATOR_GE expression
   35           | expression . OPERATOR_EQ expression
   36           | expression . OPERATOR_DIF expression

    OPERATOR_LE   shift, and go to state 93
    OPERATOR_GE   shift, and go to state 94
    OPERATOR_EQ   shift, and go to state 95
    OPERATOR_DIF  shift, and go to state 96
    '<'           shift, and go to state 97
    '>'           shift, and go to state 98
    '&'           shift, and go to state 99
    '|'           shift, and go to state 100
    '~'           shift, and go to state 101
    '+'           shift, and go to state 102
    '-'           shift, and go to state 103
    '*'           shift, and go to state 104
    '/'           shift, and go to state 105
    ')'           shift, and go to state 115


State 90

    9 cmd: KW_COMEFROM ':' expression .
   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | expression . '*' expression
   25           | expression . '/' expression
   26           | expression . '<' expression
   27           | expression . '>' expression
   28           | expression . '|' expression
   29           | expression . '&' expression
   30           | expression . '~' expression
   33           | expression . OPERATOR_LE expression
   34           | expression . OPERATOR_GE expression
   35           | expression . OPERATOR_EQ expression
   36           | expression . OPERATOR_DIF expression
